# coda-rs

./: .gitignore  .travis.yml  CODA.txt  Cargo.toml  LICENSE  README.md  bitbucket-pipelines.yml
src/: coda.rs  errors.rs  json.rs  main.rs  options.rs  tools.rs  utils.rs
test-data/: CODA-bad.txt  CODA.txt
