[package]
name = "coda-rs"
version = "0.1.1"
authors = ["Bernard Niset <bernard.niset@gmail.com>"]
build = "build.rs"

[dependencies]
argparse = "0.2.1"
error-chain = "0.10"
chrono = "0.4.1"
encoding = "0.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[build-dependencies]
chrono = "0.4.1"
